Using older exio for jdk17 on el7